@@ -839,6 +839,7 @@ namespace KGySoft.Drawing.UnitTests
                 var tiff = new Bitmap(ms);
                 Assert.AreEqual(ImageFormat.Tiff, tiff.RawFormat);
                 Assert.AreEqual(pages.Length, tiff.GetFrameCount(FrameDimension.Page));
+                SaveStream(null, ms, "tiff");
             }, PlatformID.Win32NT);
         }
 
